# kigaprio

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  IMPROVEMENT_PLAN.md  INSTRUCTIONAL_TEXTS_PROPOSAL.md  MULTI_INSTITUTION_MIGRATION.md  README.md  SECURITY_AUDIT.md  SECURITY_AUDIT_2.md  SECURITY_AUDIT_3.md  SECURITY_AUDIT_4.md  VERIFICATION.md  docker-compose.ci.yml  docker-compose.dev-with-static.yml  docker-compose.dev.yml  docker-compose.yml  justfile  package-lock.json  pyproject.toml
backend/: Dockerfile  pyproject.toml  scheduler-dev.sh  scheduler.sh
backend/scripts/: paddleocr.py  table_detection.py  test_table_detection.py
backend/src/kigaprio/: config.py  gunicorn_config.py  logging_config.py  main.py  static_files_utils.py  utils.py
backend/src/kigaprio/middleware/: auth_middleware.py  log_requests.py  metrics.py  security_headers.py
backend/src/kigaprio/models/: admin.py  analysis.py  auth.py  cookie.py  pocketbase_schemas.py  priorities.py  request.py  schemas.py  upload.py
backend/src/kigaprio/scripts/: admin_decryption_tool.py  elevate_user_to_admin.py  initialize_pocketbase.py  manual_cleanup.py  run_cleanup_tasks.py  run_monitoring.py
backend/src/kigaprio/services/: background_tasks.py  cleanup_service.py  encryption.py  excel_generator.py  file_processor.py  magic_word.py  redis_service.py  service_account.py  user_cleanup_service.py
backend/src/priotag/: logging_config.py  main.py  utils.py
backend/src/priotag/middleware/: metrics.py  security_headers.py
backend/src/priotag/models/: admin.py  auth.py  cookie.py  institution.py  pocketbase_schemas.py  priorities.py  request.py  vacation_days.py
backend/src/priotag/scripts/: create_institution.py  elevate_user_to_admin.py  (+4 more)
backend/tests/: README.md  TESTING_STRATEGY.md  conftest.py  test_gunicorn_config.py  test_main.py  test_permissions.py  test_priorities.py  test_priority_models.py  test_static_files_utils.py  test_utils.py  test_utils_extended.py
backend/tests/integration/: __init__.py  conftest.py  setup_pocketbase.py  test_account_integration.py  test_admin_integration.py  test_auth_integration.py  test_institution_isolation_security.py  test_multi_institution_integration.py  test_priorities_integration.py  test_vacation_days_integration.py
backend/tests/middleware/: test_metrics.py  test_security_headers.py
backend/tests/services/: test_encryption.py  test_encryption_extended.py  test_institution.py  test_magic_word.py  test_redis_service.py  test_service_account.py
(+194 files in other folders)
